# Windy-Development

./: CMakeLists.txt  README.md  Windy.sln  compile_flags.txt
Windy/: CMakeLists.txt  Windy.vcxproj  Windy.vcxproj.filters  main.cpp
Windy/Debug/: Windy.exe.recipe
Windy/src/: main.cpp
Windy/src/api/graphics/: glhooks.cpp  glhooks.h  glutbridge.cpp  glutbridge.h  glxbridge.cpp  glxbridge.h  sdlcalls.cpp  sdlcalls.h  shaderpatches.cpp  shaderpatches.h  x11bridge.cpp  x11bridge.h  x11types.h
Windy/src/api/graphics/shaderWork/: common.h
Windy/src/api/libc/: libcbridge.cpp  libcbridge.h  pthread_barrier.cpp  pthread_cond.cpp  pthread_emu.cpp  pthread_emu.h  pthread_mapper.cpp  pthread_mutex.cpp  pthread_once.cpp  pthread_rwlock.cpp  pthread_semaphore.cpp  pthread_spin.cpp  pthread_thread.cpp  pthread_tls.cpp  pthreadbridge.cpp  pthreadbridge.h
Windy/src/api/linux/: filesystembridge.cpp  filesystembridge.h  gccbridge.cpp  gccbridge.h  hardwarebridge.cpp  hardwarebridge.h  ipcbridge.cpp  ipcbridge.h  linuxtypes.h  processbridge.cpp  processbridge.h
Windy/src/api/sega/: libsegaapi.c  libsegaapi.h
Windy/src/core/: common.h  common.h.old  config.cpp  config.h  elfloader.cpp  elfloader.h  elfloader.h.old  gamedata.h  ilibraryloader.h  iniparser.cpp  iniparser.h  linuxstack.cpp  linuxstack.h  log.cpp  log.h  memorymanager.cpp  memorymanager.h  nativedllloader.h  patches.cpp  patches.h  sharedobjectmanager.cpp  sharedobjectmanager.h  symbolresolver.cpp  symbolresolver.h
Windy/src/hardware/: baseboard.cpp  baseboard.h  cardreader.cpp  cardreader.h  defaultbindings.cpp  eepromboard.cpp  eepromboard.h  input.cpp  input.h  jvsboard.cpp  jvsboard.h  lindberghdevice.cpp  lindberghdevice.h  sdlinput.cpp  sdlinput.h  securityboard.cpp  securityboard.h  serialboard.cpp  serialboard.h
